force-app/main/default/objects/Financial_Activity_Reference__e/Financial_Activity_Reference__e.object-meta.xml
<CustomObject>
    <label>Financial Activity Reference</label>
    <pluralLabel>Financial Activity Reference</pluralLabel>
</CustomObject>