force-app/main/default/objects/Financial_Activity_Reference__e/fields/Budget_Id__c.field-meta.xml
<CustomField>
    <fullName>Budget_Id__c</fullName>
    <label>Budget Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>