force-app/main/default/objects/Financial_Activity_Reference__e/fields/Date_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Activity__c</fullName>
    <label>Date of Activity</label>
    <type>Date</type>
</CustomField>