force-app/main/default/objects/Financial_Activity_Reference__e/fields/Disbursement_Name__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Name__c</fullName>
    <label>Disbursement Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>