force-app/main/default/objects/Financial_Activity_Reference__e/fields/Escrow_Account__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account__c</fullName>
    <label>Escrow Account #</label>
    <length>65</length>
    <type>Text</type>
</CustomField>