force-app/main/default/objects/Financial_Activity_Reference__e/fields/Funding_Id__c.field-meta.xml
<CustomField>
    <fullName>Funding_Id__c</fullName>
    <label>Funding Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>