force-app/main/default/objects/Financial_Activity_Reference__e/fields/Type_of_Activity__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Activity__c</fullName>
    <label>Type of Activity</label>
    <length>100</length>
    <type>Text</type>
</CustomField>